--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,3 +57,22 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer base {
+  p {
+    @apply leading-7;
+  }
+  blockquote {
+    @apply mt-6 border-l-2 pl-6 italic;
+  }
+  code {
+    @apply relative rounded bg-muted px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
+  }
+  small {
+    @apply text-sm font-medium leading-none;
+  }
+}
+
+.muted {
+  @apply text-sm text-muted-foreground;
+}
